[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "big-code-analysis"
description = "Python bindings for the big-code-analysis Rust library"
readme = "README.md"
requires-python = ">=3.12"
license = "MPL-2.0"
authors = [
  { name = "Calixte Denizet", email = "cdenizet@mozilla.com" },
  { name = "Elijah Zupancic", email = "elijah@zupancic.name" },
]
keywords = ["metrics", "tree-sitter", "static-analysis"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Rust",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Quality Assurance",
]
# Version is read from the Rust workspace's Cargo.toml at build time
# by maturin (see [tool.maturin].version below).
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/dekobon/big-code-analysis"

[project.optional-dependencies]
# Test/lint dependencies. Hermetic — `uv pip install -e .[dev]` is
# the supported development install. Pinned floors track the
# versions exercised by CI; the upper bound on maturin stays open
# within the 1.x series.
dev = [
  "pytest>=8.0",
  "mypy>=1.10",
  "ruff>=0.6,<0.16",
  "pyright>=1.1.380",
  "maturin>=1.7,<2.0",
]

[tool.maturin]
# Compiled extension lands at `big_code_analysis._native` so the
# Python facade in `python/big_code_analysis/__init__.py` can re-export
# from it without colliding with the package name.
module-name = "big_code_analysis._native"
python-source = "python"
# `extension-module` is gated behind a Cargo feature so a plain
# `cargo test` from inside the workspace can use `pyo3/auto-initialize`
# instead. maturin builds always need the wheel-side variant.
#
# `pyo3/abi3-py312` switches the build to the limited (stable) Python
# C API targeting CPython 3.12+, so a single wheel per architecture
# covers 3.12, 3.13, 3.14, … without the wheel matrix doubling per
# minor release. The bindings' public surface (PyDict / PyAny / custom
# exceptions, no generators, no async) is entirely inside the abi3
# subset.
#
# This feature is wired through `[tool.maturin].features`, NOT through
# the crate's own `[features]` table — by design. `cargo test
# --workspace --all-features` therefore continues to activate the
# crate's `default = ["pyo3/auto-initialize"]` feature (the cargo-side
# test path needs an embedded interpreter), and only *maturin-driven*
# builds (the released wheel, the `python-test` CI job, and any local
# `make py-test` / `maturin develop`) exercise the abi3 surface.
#
# A contributor who only runs `cargo test` locally will NOT trip a
# non-abi3 violation introduced in their PR; the `python-test` job in
# `.github/workflows/ci.yml` is the gate that catches it because that
# job runs `maturin develop` on every PR touching
# `big-code-analysis-py/`. `make pre-commit` invokes the same
# `maturin develop` path, so a contributor who runs the documented
# pre-commit gate locally also catches the regression before push.
features = ["pyo3/extension-module", "pyo3/abi3-py312"]
no-default-features = true

# ---------------------------------------------------------------------------
# Linting and formatting (ruff). Config is intentionally nested under
# [tool.ruff.lint] — ruff 0.2+ requires the nested form and emits a
# deprecation warning on top-level `extend-select` / `ignore` (gone
# entirely in 0.6+).
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["target", "python/big_code_analysis/_native.pyi"]

[tool.ruff.lint]
# Conservative starting set. `E`/`F`/`W` are pyflakes + pycodestyle
# (always-on for any well-typed Python). `I` enforces isort-style
# import grouping. `B`/`UP`/`SIM` catch real bug-bait (mutable
# defaults, deprecated syntax, redundant idioms). `RUF` covers
# ruff's own rules (e.g. RUF013 implicit-Optional). `PERF` flags
# unnecessary list/dict/set comprehensions. `PT` is flake8-pytest-
# style. Full `PL` (Pylint) is deliberately omitted — its design rules
# (PLR0913 too-many-arguments, PLR0915 too-many-statements) would
# force test-suite refactors that belong in a follow-up issue.
extend-select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF", "PERF", "PT"]

[tool.ruff.lint.flake8-pytest-style]
# Existing tests use the tuple form for parametrize names
# (`("fixture", "language")`); honour that style. PT006 default is
# `tuple`, kept explicit so this is self-documenting.
parametrize-names-type = "tuple"
parametrize-values-type = "list"

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

# ---------------------------------------------------------------------------
# mypy --strict. `files = ["python", "tests", "examples"]` is run
# *from the big-code-analysis-py directory* (the Makefile cd's
# there), so paths are relative to that crate root. `--strict` is
# set in the Makefile / CI invocation rather than here so that
# ad-hoc `mypy` invocations (e.g. from an editor extension) inherit
# the same baseline without the implementer remembering the flag.
#
# `examples/` is type-checked alongside `python/` and `tests/` so
# the book's embedded snippets (`{{#include ../../big-code-analysis-py/examples/*.py}}`)
# stay under `--strict`. The Makefile `py-typecheck` recipe and
# the CI `python-lint` job both pass the same explicit path list
# — keep them in lockstep when this list changes (mypy's explicit
# CLI paths override the `files=` value below, so a drift between
# pyproject and the invocation is silently wrong).
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
files = ["python", "tests", "examples"]
# The compiled .so module lives at `big_code_analysis._native`; its
# type information comes from `python/big_code_analysis/_native.pyi`
# (a hand-written stub committed to the repo). `strict = true`
# already implies `ignore_missing_imports = false` workspace-wide,
# so no per-module override is needed — mypy will refuse to silently
# fall back to `Any` if the stub is ever deleted.
