[package]
name = "big-code-analysis-web"
version = "0.0.25"
authors = ["Calixte Denizet <cdenizet@mozilla.com>"]
edition = "2024"
repository = "https://github.com/dekobon/big-code-analysis/tree/main/big-code-analysis-web"
keywords = ["metrics"]
description = "Run a web service to compute and export code metrics"
license = "MPL-2.0"

[dependencies]
actix-rt = "^2.6"
actix-web = "^4.2"
clap = { version = "^4.0", features = ["derive"] }
futures = "^0.3"
big-code-analysis = { path = "..", version = "=0.0.25" }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tokio = { version = "1", features = ["rt", "sync", "time"] }

[dev-dependencies]
assert_cmd = "^2.0"
predicates = "^3.0"
pretty_assertions = "^1.3"
