[package]
name = "big-code-analysis-web"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository = "https://github.com/dekobon/big-code-analysis/tree/main/big-code-analysis-web"
keywords = ["metrics"]
description = "Run a web service to compute and export code metrics"

[dependencies]
actix-rt = "^2.6"
actix-web = "^4.2"
clap = { version = "^4.0", features = ["derive"] }
futures = "^0.3"
# The web crate exposes every language `bca-web` advertises, so it
# pins the library's full feature set explicitly. Disabling default
# features here would silently drop grammars from the daemon build.
# See #252.
big-code-analysis = { path = "..", version = "=1.0.0", default-features = false, features = [
  "all-languages",
] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tokio = { version = "1", features = ["rt", "sync", "time"] }

[lints]
workspace = true

[dev-dependencies]
assert_cmd = "^2.0"
predicates = "^3.0"
pretty_assertions = "^1.3"

# Debian/Ubuntu packaging — consumed by `cargo deb` in release CI.
# The binary asset path `target/release/bca-web` is rewritten by
# cargo-deb to `target/<triple>/release/bca-web` when `--target` is
# passed; all other asset source paths are resolved relative to this
# crate's Cargo.toml. `name` is intentionally omitted — cargo-deb
# defaults the deb package name to the cargo package name
# (`big-code-analysis-web`), which is what we want.
[package.metadata.deb]
maintainer = "Elijah Zupancic <elijah@zupancic.name>"
section = "devel"
priority = "optional"
extended-description = """\
REST API server wrapping the big-code-analysis library.

big-code-analysis-web ships the `bca-web` daemon, which exposes the
maintainability-metric extractors from big-code-analysis (cognitive
complexity, cyclomatic, Halstead, LOC, maintainability index, ABC,
exit points, and more) as an HTTP service. Source can be posted in
any of the languages supported by the library — C, C++, JavaScript,
TypeScript, Python, Java, C#, Go, Kotlin, Rust, Bash, Lua, Perl,
PHP, and Tcl — and results are returned as JSON.\
"""
assets = [
  [
    "target/release/bca-web",
    "usr/bin/",
    "755",
  ],
  [
    "../README.md",
    "usr/share/doc/big-code-analysis-web/README.md",
    "644",
  ],
  [
    "../LICENSE",
    "usr/share/doc/big-code-analysis-web/LICENSE",
    "644",
  ],
  # Per-binary TPL — covers bca-web's dep closure (actix-web, tokio,
  # futures + lib + grammars). bca's clap/ignore deps are NOT in this
  # file; they ship in THIRD-PARTY-LICENSES-bca.md alongside the CLI
  # crate's deb.
  [
    "../THIRD-PARTY-LICENSES-bca-web.md",
    "usr/share/doc/big-code-analysis-web/THIRD-PARTY-LICENSES-bca-web.md",
    "644",
  ],
  # Generated by `cargo xtask` and CI-gated under `man/`.
  [
    "../man/bca-web.1",
    "usr/share/man/man1/",
    "644",
  ],
]

# RHEL/Rocky/Fedora/Amazon Linux packaging — consumed by
# `cargo generate-rpm` in release CI. Source paths are resolved
# relative to this crate's Cargo.toml. `name` is intentionally
# omitted — defaults to the cargo package name.
[package.metadata.generate-rpm]
summary = "REST API server for big-code-analysis metrics"
license = "MPL-2.0"
vendor = "Elijah Zupancic"
url = "https://github.com/dekobon/big-code-analysis"
assets = [
  { source = "../target/release/bca-web", dest = "/usr/bin/bca-web", mode = "755" },
  { source = "../README.md", dest = "/usr/share/doc/big-code-analysis-web/README.md", mode = "644", doc = true },
  { source = "../LICENSE", dest = "/usr/share/doc/big-code-analysis-web/LICENSE", mode = "644" },
  { source = "../THIRD-PARTY-LICENSES-bca-web.md", dest = "/usr/share/doc/big-code-analysis-web/THIRD-PARTY-LICENSES-bca-web.md", mode = "644" },
  { source = "../man/bca-web.1", dest = "/usr/share/man/man1/bca-web.1", mode = "644" },
]
auto-req = "disabled"
