[package]
name = "enums"
version = "1.1.0"
publish = false
authors = ["Calixte Denizet <cdenizet@mozilla.com>"]
edition = "2024"

[dependencies]
clap = { version = "^4.0", features = ["derive"] }
askama = "^0.16"

# NOTE: enums/ is excluded from the workspace (see ../Cargo.toml
# [workspace].exclude), so these pins cannot inherit from
# [workspace.dependencies]. They MUST be kept in lockstep with the
# matching block in ../Cargo.toml when grammars are bumped
# (see recreate-grammars.sh).
tree-sitter = "=0.26.9"
tree-sitter-bash = "=0.25.1"
tree-sitter-c-sharp = "=0.23.5"
tree-sitter-elixir = "=0.3.5"
tree-sitter-go = "=0.25.0"
dekobon-tree-sitter-groovy = "=0.2.1"
tree-sitter-irules = "=0.1.1"
tree-sitter-java = "=0.23.5"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-lua = "=0.5.0"
tree-sitter-perl = "=1.1.2"
tree-sitter-php = "=0.24.2"
tree-sitter-typescript = "=0.23.2"
tree-sitter-javascript = "=0.25.0"
tree-sitter-python = "=0.25.0"
tree-sitter-ruby = "=0.23.1"
tree-sitter-rust = "=0.24.2"
# Vendored grammar forks — see ../Cargo.toml for rationale on the
# `package = ...` alias trick that preserves the `tree_sitter_<lang>`
# import path while the published crate name is `bca-tree-sitter-<lang>`.
tree-sitter-tcl = { package = "bca-tree-sitter-tcl", path = "../tree-sitter-tcl", version = "=1.1.0" }
tree-sitter-preproc = { package = "bca-tree-sitter-preproc", path = "../tree-sitter-preproc", version = "=1.1.0" }
tree-sitter-ccomment = { package = "bca-tree-sitter-ccomment", path = "../tree-sitter-ccomment", version = "=1.1.0" }
tree-sitter-mozcpp = { package = "bca-tree-sitter-mozcpp", path = "../tree-sitter-mozcpp", version = "=1.1.0" }
tree-sitter-mozjs = { package = "bca-tree-sitter-mozjs", path = "../tree-sitter-mozjs", version = "=1.1.0" }

[profile.release]
debug = "line-tables-only"
