[package]
name = "bca-tree-sitter-ccomment"
description = "Ccomment grammar for the tree-sitter parsing library (big-code-analysis fork)"
version = "1.1.0"
authors = [
  "Calixte Denizet <cdenizet@mozilla.com>",
  "Elijah Zupancic <elijah@zupancic.name>",
]
license = "MIT"
readme = "bindings/rust/README.md"
keywords = ["incremental", "parsing", "ccomment"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/dekobon/big-code-analysis"
# Upstream lineage this fork is derived from; preserved so the
# crates.io landing page links back to the Mozilla original.
homepage = "https://github.com/mozilla/rust-code-analysis"
edition = "2021"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "src/*",
  "LICENSE",
]

[lib]
name = "tree_sitter_ccomment"
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language="0.1.0"

[build-dependencies]
cc = "^1.0"

[dev-dependencies]
tree-sitter = "=0.26.9"
