[package]
name = "bca-tree-sitter-mozcpp"
description = "Mozcpp grammar for the tree-sitter parsing library (big-code-analysis fork)"
version = "1.1.0"
authors = [
  "Calixte Denizet <cdenizet@mozilla.com>",
  "Elijah Zupancic <elijah@zupancic.name>",
]
license = "MIT"
readme = "bindings/rust/README.md"
keywords = ["incremental", "parsing", "mozcpp"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/dekobon/big-code-analysis"
# Upstream lineage this fork is derived from; preserved so the
# crates.io landing page links back to the Mozilla original.
homepage = "https://github.com/mozilla/rust-code-analysis"
edition = "2021"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "src/*",
  "LICENSE",
]

[lib]
name = "tree_sitter_mozcpp"
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language="0.1.0"

[build-dependencies]
cc = "^1.0"
# This dependency is not used at all for this crate, but it is here so that
# dependabot can send notifications when there are updates for this grammar.
#
# IMPORTANT: bumping this version is a NOTIFICATION HOOK ONLY — it does NOT
# regenerate the bundled `src/parser.c` / `src/scanner.c`. Any version bump
# MUST be accompanied by re-running `./generate-grammars/generate-mozcpp.sh`
# and committing the regenerated sources in the same PR. See #400 for the
# audit trail on the related tree-sitter-mozjs marker.
tree-sitter-cpp = "0.23.4"

[package.metadata.cargo-udeps.ignore]
build = ["tree-sitter-cpp"]

[dev-dependencies]
tree-sitter = "=0.26.9"
