[package]
name = "bca-tree-sitter-mozjs"
description = "Mozjs grammar for the tree-sitter parsing library (big-code-analysis fork)"
version = "1.1.0"
authors = [
  "Calixte Denizet <cdenizet@mozilla.com>",
  "Elijah Zupancic <elijah@zupancic.name>",
]
license = "MIT"
readme = "bindings/rust/README.md"
keywords = ["incremental", "parsing", "mozjs"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/dekobon/big-code-analysis"
# Upstream lineage this fork is derived from; preserved so the
# crates.io landing page links back to the Mozilla original.
homepage = "https://github.com/mozilla/rust-code-analysis"
edition = "2021"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "src/*",
  "LICENSE",
]

[lib]
name = "tree_sitter_mozjs"
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language="0.1.0"

[build-dependencies]
cc = "^1.2"
# This dependency is not used at all for this crate, but it is here so that
# dependabot can send notifications when there are updates for this grammar.
#
# IMPORTANT: bumping this version is a NOTIFICATION HOOK ONLY — it does NOT
# regenerate the bundled `src/parser.c` / `src/scanner.c`. Any version bump
# MUST be accompanied by re-running `./generate-grammars/generate-mozjs.sh`
# and committing the regenerated sources in the same PR. The bundled grammar
# was last refreshed when the marker was at 0.23.1 (#1141, 2025-03-30); see
# #400 for the audit trail confirming the 0.23.1 → 0.25.0 marker bump did
# not include the matching regen.
tree-sitter-javascript = "0.25.0"

[package.metadata.cargo-udeps.ignore]
build = ["tree-sitter-javascript"]

[dev-dependencies]
tree-sitter = "=0.26.9"
