[package]
name = "tree-sitter-tcl"
description = "Tcl grammar for the tree-sitter parsing library"
version = "1.1.0"
keywords = ["incremental", "parsing", "TCL"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter-grammars/tree-sitter-tcl"
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "src/grammar.json",
  "src/node-types.json",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1.0"

[build-dependencies]
cc = "^1.0"

[dev-dependencies]
tree-sitter = "=0.26.8"
