[package]
name = "bca-tree-sitter-tcl"
description = "Tcl grammar for the tree-sitter parsing library (big-code-analysis fork)"
version = "1.1.0"
authors = [
  "Lewis Russell",
  "Elijah Zupancic <elijah@zupancic.name>",
]
readme = "bindings/rust/README.md"
keywords = ["incremental", "parsing", "TCL"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/dekobon/big-code-analysis"
# Upstream grammar this fork is derived from; preserved so the
# crates.io landing page links back to the source-of-truth grammar.
homepage = "https://github.com/tree-sitter-grammars/tree-sitter-tcl"
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "src/grammar.json",
  "src/node-types.json",
  "src/*",
  "LICENSE",
]

[lib]
name = "tree_sitter_tcl"
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1.0"

[build-dependencies]
cc = "^1.0"

[dev-dependencies]
tree-sitter = "=0.26.9"
